test/tests/stages/8_loops/valid/extra_credit/label_loop_body.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(result)
  =
  const int(0)
  ;
  goto
  identifier(label)
  ;
  while
  (
  const int(0)
  )
  identifier(label)
  :
  {
  identifier(result)
  =
  const int(1)
  ;
  }
  return
  identifier(result)
  ;
  }
