test/tests/stages/8_loops/invalid_parse/while_missing_paren.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  while
  const int(1)
  {
  return
  const int(0)
  ;
  }
  }
